# dev-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: active-flow  settings.json  settings.local.json
.claude/flows/flow-commands-hardening/: PROGRESS-LOG.md  context.toml  context.toml.sha256  execution-record.toml  execution-record.toml.sha256
.claude/flows/plan-execution-record/: PROGRESS-LOG.md  context.toml  context.toml.sha256  execution-record.toml  execution-record.toml.sha256  review-ledger.toml  review-ledger.toml.sha256
.claude/flows/specialised-flow-agents/: PROGRESS-LOG.md  context.toml  context.toml.sha256  execution-record.toml  execution-record.toml.sha256
.claude/flows/tomlctl-capability-gaps/: PROGRESS-LOG.md  context.toml  context.toml.sha256  execution-record.toml  execution-record.toml.sha256  review-ledger.toml  review-ledger.toml.sha256
.claude/optimise-findings/: tomlctl.toml  tomlctl.toml.sha256
.claude/plans/: recursive-swinging-snowflake-agent-a5489bcbc8f4214e8.md  recursive-swinging-snowflake.md  rippling-toasting-hedgehog.md
.claude/reviews/: claude-commands.toml  claude-commands.toml.sha256  integrity-refresh.toml  integrity-refresh.toml.sha256
.githooks/: pre-commit
claude/agents/: flow-implement-deep.md  flow-implement-lite.md  flow-research.md  verification.md
claude/commands/: implement.md  optimise-apply.md  optimise.md  plan-new.md  plan-update.md  review-apply.md  review-gh.md  review-plan.md  review.md  tdd.md  test-bootstrap.md
claude/commands/staging/: review-plan.md
claude/config/: statusline.fish
claude/skills/implement/: SKILL.md
claude/skills/implement/references/: implementation-agent-prompt.md  verification-agent-prompt.md
claude/skills/implement/tests/: triggers.md
claude/skills/optimise/: SKILL.md
claude/skills/optimise-apply/: SKILL.md
claude/skills/optimise-apply/references/: optimise-apply-agent-prompt.md  verification-agent-prompt.md
claude/skills/optimise-apply/tests/: triggers.md
claude/skills/optimise/references/: findings-report-template.md  lenses.md
claude/skills/optimise/tests/: triggers.md
claude/skills/plan-new/: SKILL.md
claude/skills/plan-new/references/: explore-agent-brief.md  plan-file-template.md  research-agent-brief.md
claude/skills/plan-new/tests/: triggers.md
claude/skills/plan-update/: SKILL.md
claude/skills/plan-update/references/: catchup-operation.md  reconcile-operation.md  reformat-operation.md
claude/skills/plan-update/tests/: triggers.md
claude/skills/review/: SKILL.md
claude/skills/review-gh/: SKILL.md
claude/skills/review-gh/references/: project-bootstrap.md  project-persist.md  review-lenses.md
claude/skills/review-gh/tests/: triggers.md
claude/skills/review-plan/: SKILL.md
claude/skills/review-plan/references/: review-plan-lenses.md  review-plan-report-template.md
claude/skills/review-plan/tests/: triggers.md
claude/skills/review/references/: review-ledger-format.md  review-report-template.md
claude/skills/review/tests/: triggers.md
claude/skills/test-author/: SKILL.md
claude/skills/tomlctl/: SKILL.md
docs/plans/: flow-commands-hardening.md  specialised-flow-agents.md  tomlctl-capability-gaps.md
scripts/: shared-blocks.toml  verify-shared-blocks.sh
tomlctl/: Cargo.toml  README.md
tomlctl/.cargo/: config.toml
tomlctl/src/: blocks.rs  cli.rs  convert.rs  dedup.rs  errors.rs  integrity.rs  io.rs  items.rs  main.rs  orphans.rs  output.rs  query.rs  test_support.rs
tomlctl/src/cli/: dispatch.rs  mod.rs  types.rs
tomlctl/tests/: blocks.rs  capabilities.rs  integration.rs  items_dedupe.rs  items_dry_run.rs
tomlctl/tests/common/: mod.rs
tomlctl/tests/fixtures/: context.toml  ledger.toml
