[package]
name = "tomlctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ross Anderson"]
description = "Flow-tooling CLI for Claude Code: TOML read/write, ledger ops, shared-block parity verification"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tomlctl"
path = "src/main.rs"

[dependencies]
toml = { version = "^1.1", features = ["preserve_order"] }
# `preserve_order` keeps serde_json::Map insertion-ordered so count-by /
# group-by output preserves first-seen key order (R68).
serde_json = { version = "^1", features = ["preserve_order"] }
clap = { version = "^4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
anyhow = "^1"
tempfile = "^3"
fs4 = "^0.13"
sha2 = "^0.11"
# Default features trimmed: no Unicode classes — query predicates target ASCII identifiers/paths
regex = { version = "^1", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
# R41/R58: black-box CLI integration harness. assert_cmd locates the built
# binary via `Command::cargo_bin("tomlctl")`; predicates supplies the
# stdout/stderr matchers used inside `.assert()`.
assert_cmd = "^2"
predicates = "^3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
