[package]
name = "tomlctl"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ross Anderson"]
description = "Flow-tooling CLI for Claude Code: TOML read/write, ledger ops, shared-block parity verification"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tomlctl"
path = "src/main.rs"

[dependencies]
toml = { version = "^1.1", features = ["preserve_order"] }
# `preserve_order` keeps serde_json::Map insertion-ordered so count-by /
# group-by output preserves first-seen key order (R68).
serde_json = { version = "^1", features = ["preserve_order"] }
clap = { version = "^4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
anyhow = "^1"
tempfile = "^3"
fs4 = "^0.13"
# O56: mimalloc as the global allocator. tomlctl's hot paths are
# small-allocation-heavy — TomlValue/JsonValue tree clones plus per-item
# serde_json::Map allocations during ledger reads and parity hashing. Microsoft's
# benchmarks show ~5.3× faster small-allocation throughput vs glibc malloc, and
# rust-analyzer adopted mimalloc as default for the same profile (PR #19603).
# `default-features = false` skips the optional `secure` mode; we want raw speed,
# not the ~10% guard-page/encrypted-free-list overhead.
mimalloc = { version = "0.1", default-features = false }
sha2 = "^0.11"
# Default features trimmed: no Unicode classes — query predicates target ASCII identifiers/paths
regex = { version = "^1", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
# R41/R58: black-box CLI integration harness. assert_cmd locates the built
# binary via `Command::cargo_bin("tomlctl")`; predicates supplies the
# stdout/stderr matchers used inside `.assert()`.
assert_cmd = "^2"
predicates = "^3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
